[package]
name = "waterlog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bpaf = { version = "0.9.20", features = ["bright-color", "owo-colors", "batteries"] }
btleplug = "0.11.8"
futures = "0.3.31"
gpui = "0.2.2"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = "1.18.1"
